unpackaged/main/default/objects/fferpcore__AnalysisItem__c/fferpcore__AnalysisItem__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__AnalysisItemHelp</customHelpPage>
    <description>Used to sub-analyze postings and can be used to represent a number of different business concepts.</description>
    <label>Analysis Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analysis Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>