unpackaged/main/default/objects/fferpcore__AnalysisItem__c/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <label>Correlation Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>