unpackaged/main/default/objects/fferpcore__AnalysisItem__c/fields/fferpcore__ReportingCode__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ReportingCode__c</fullName>
    <description>An alternative name or code to be used for reporting.</description>
    <externalId>true</externalId>
    <inlineHelpText>An alternative name or code to be used for reporting.</inlineHelpText>
    <label>Reporting Code</label>
    <length>24</length>
    <required>true</required>
    <type>Text</type>
</CustomField>