unpackaged/main/default/objects/fferpcore__AnalysisItem__c/fields/fferpcore__UniquenessConstraint__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__UniquenessConstraint__c</fullName>
    <description>An identifier which is used to prevent duplicate analysis items from being created.</description>
    <inlineHelpText>An identifier which is used to prevent duplicate analysis items from being created.</inlineHelpText>
    <label>Uniqueness Constraint</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>