unpackaged/main/default/objects/fferpcore__AnalysisItem__c/recordTypes/fferpcore__Analysis_3.recordType-meta.xml
<RecordType>
    <fullName>fferpcore__Analysis_3</fullName>
    <active>true</active>
    <description>Used to sub-analyze billing documents and can be used to represent a number of different business concepts.</description>
    <label>Analysis 3</label>
</RecordType>