unpackaged/main/default/objects/fferpcore__AnalysisItem__c/listViews/fferpcore__All.listView-meta.xml
<ListView>
    <fullName>fferpcore__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>fferpcore__ReportingCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>