unpackaged/main/default/objects/fferpcore__AnalysisItem__c/listViews/fferpcore__Analysis4.listView-meta.xml
<ListView>
    <fullName>fferpcore__Analysis4</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__ReportingCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>fferpcore__AnalysisItem__c.fferpcore__Analysis_4</value>
    </filters>
    <label>Analysis 4</label>
</ListView>